<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="@drawable/background_main_activity"
tools:context=".activities.RecipesActivity"
android:orientation="horizontal">

<ImageView android:layout_gravity="top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:src="@drawable/title"/>

<TableLayout
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <TableRow>
        <Button
            android:id="@+id/craft_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_margin="20dp"
            android:drawableTop="@drawable/crafting_table"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/craft" />
        <Button
            android:id="@+id/charms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_margin="20dp"
            android:drawableTop="@drawable/charms"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/charms" />
        <Button
            android:id="@+id/potion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_margin="20dp"
            android:drawableTop="@drawable/potion"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/potion"/>
    </TableRow>

    <TableRow android:layout_marginTop="30dp">
        <Button
            android:id="@+id/beacon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableTop="@drawable/beacon"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/beacon" />
        <Button
            android:id="@+id/stove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableTop="@drawable/stove"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/stove" />
        <Button
            android:id="@+id/anvil_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableTop="@drawable/anvil"
            android:background="@null"
            android:textColor="@color/white_color"
            android:textSize="16dp"
            android:text="@string/anvil"/>
    </TableRow>
</TableLayout>
</FrameLayout>