<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_main_activity"
    tools:context=".activities.MainActivity"
    android:orientation="horizontal">

    <ImageView android:layout_gravity="top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/title"/>

    <TableLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TableRow>
            <Button
                android:id="@+id/recipe_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="20dp"
                android:drawableTop="@drawable/recipe"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/recipe" />
            <Button
                android:id="@+id/id_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="20dp"
                android:drawableTop="@drawable/id"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/id" />
            <Button
                android:id="@+id/redstone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="20dp"
                android:drawableTop="@drawable/redstone"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/redstone"/>
        </TableRow>

        <TableRow android:layout_marginTop="30dp">
            <Button
                android:id="@+id/gameplay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:drawableTop="@drawable/gameplay"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/gameplay" />
            <Button
                android:id="@+id/mobs_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:drawableTop="@drawable/mobs"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/mobs" />
            <Button
                android:id="@+id/pro_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:drawableTop="@drawable/pro"
                android:background="@null"
                android:textColor="@color/white_color"
                android:textSize="16dp"
                android:text="@string/pro"/>
        </TableRow>
    </TableLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="visible"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">

    </com.google.android.gms.ads.AdView>
</FrameLayout>